--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
     "name": "malukenho/speaknumber",
     "description": "Transcreve números para extenso.",
-    "require": {
-        "php": ">=5.5.0"
-    },
+	"minimum-stability" :"dev",
+	"require": {
+		"php": ">=5.5.0"
+	},
     "require-dev": {
-        "phpunit/phpunit": "~4.2.4",
+		"phpunit/phpunit": "4.2.4",
         "squizlabs/php_codesniffer": "~1.5.4"
     },
     "autoload": {
