--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
         "phpunit/phpunit": "~4.2.4",
         "squizlabs/php_codesniffer": "~1.5.4"
     },
+    "suggest": {
+        "ext-intl": "Allow speaking a number in many languages."
+    },
     "autoload": {
         "psr-0": {
             "": "src/"
