--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,24 @@
 {
     "name": "malukenho/speaknumber",
     "description": "Transcreve números para extenso.",
-	"minimum-stability" :"dev",
-	"require": {
-		"php": ">=5.5.0"
-	},
+    "require": {
+        "php": ">=5.3.0"
+    },
     "require-dev": {
-		"phpunit/phpunit": "4.2.4",
-        "squizlabs/php_codesniffer": "~1.5.4"
+        "phpunit/phpunit": "~4.3",
+        "squizlabs/php_codesniffer": "~1.5"
     },
     "suggest": {
         "ext-intl": "Allow speaking a number in many languages."
     },
     "autoload": {
-        "psr-0": {
-            "": "src/"
+        "psr-4": {
+            "Speak\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Speak\\Test\\": "tests/"
         }
     }
 }
