Fix call to phpunit when run the CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ php:
 
 script:
   - composer install
-  - phpunit
+  - ./vendor/bin/phpunit --colors tests/
   - ./vendor/bin/phpcs --standard=PSR2 ./src/ ./tests/
