--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": "~5.5|~7.0"
+    "php": "~5.5|~7.0|^8.0"
   },
   "require-dev": {
     "phpunit/phpunit":           "4.2.4",
